--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/8.0-rc-1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'ProjectCafe'
+rootProject.name = 'IS217_Final'
 include('app')
